--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       alias: {
         '/.*/_navbar.md': '/_navbar.md',
         '/en_US/(.*)': './en_US/$1',
+        '/programing/(.*)': './编程规范/$1',
+        '/cgwiki/(.*)': './cgwiki/$1',
       },
       auto2top: true,
       coverpage: false,
