--- a/PyToolkit/index.html
+++ b/PyToolkit/index.html
@@ -31,6 +31,7 @@
 <body>
   <div id="app">Loading ...</div>
   <script>
+    let home = false;
     window.$docsify = {
       Valine: {
         appId: 'mrRioyNTSEAOvVLAsLgkhr4j-gzGzoHsz',
@@ -68,19 +69,14 @@
         },
         isExpected: true
       },
-      toc: {
-        scope: '.markdown-section',
-        headings: 'h1, h2, h3, h4, h5, h6',
-        title: 'Table of Contents',
-      },
-
-
       alias: {
         '/.*/_navbar.md': '/_navbar.md',
-        '/en_US/(.*)': './en_US/$1',
-        '/programing/(.*)': './programing/$1',
-        '/cgwiki/(.*)': './cgwiki/$1',
-        // '/PyToolkit/(.*)': './PyToolkit/$1',
+        '/home': () => {
+          if(home)
+            window.open(window.location.origin)
+          else
+            home = true;
+        },
       },
       auto2top: true,
       coverpage: false,
@@ -95,7 +91,7 @@
       //   host: '//matomo.thunderwave.de',
       //   id: 6
       // },
-      name: '智伤帝的 Wiki 文档',
+      name: 'PyToolkit 文档',
       search: {
         maxAge: 86400000,
         noData: {
@@ -128,7 +124,6 @@
   <!-- NOTE 添加额外的插件 -->
   <!-- docsify-themeable (latest v0.x.x) -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
-  <script src="//unpkg.com/docsify-glossary/dist/docsify-glossary.min.js"></script>
   <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
