--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         '/cgwiki/(.*)': './cgwiki/$1',
         // '/PyToolkit/': 'CG_wiki/PyToolkit/',
       },
+      requestHeaders: {
+        // 避免访问了旧的资源没有更新
+        'cache-control': 'max-age=600',
+      },
       auto2top: true,
       coverpage: false,
       executeScript: true,
@@ -113,20 +117,7 @@
           '/': '搜索'
         }
       },
-      plugins: [
-        function (hook, vm) {
-          hook.ready(() => {
-            links = document.getElementsByClassName('GITHUB_FIX')
-            console.log(links)
-            website = window.location.origin
-            if (website.includes("github"))
-              for (var i = 0; i < links.length; i++) {
-                link = links[i]
-                link.href = link.href.replace(website, "/CG_wiki")
-              }
-          })
-        }
-      ]
+      plugins: []
     }
   </script>
 
