--- a/PyToolkit/index.html
+++ b/PyToolkit/index.html
@@ -92,7 +92,7 @@
       repo:"https://github.com/FXTD-ODYSSEY/Unreal-PyToolkit",
       name: 'PyToolkit 文档',
       search: {
-        maxAge: 86400000,
+        maxAge: 60000,
         noData: {
           '/en-us/': 'No results!',
           '/': '没有结果!'
