--- a/unreal/PyToolkit/index.html
+++ b/unreal/PyToolkit/index.html
@@ -128,6 +128,7 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-example-panels"></script>
   <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <script src="/js/count.js"></script>
+  <script src="/js/glossary.js"></script>
   <script src="/js/pagination.js"></script>
   <!-- <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
 
