--- a/Python/QBinder/index.html
+++ b/Python/QBinder/index.html
@@ -118,6 +118,7 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-markdown.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-nginx.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-php.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
 
   <!-- NOTE 添加额外的插件 -->
   <!-- docsify-themeable (latest v0.x.x) -->
